--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "homepage": "https://github.com/alandawi/adhoc-utils#readme",
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.0.20",
+    "edit-file": "^0.3.0",
+    "move-file": "^1.2.0",
     "promisify": "^0.0.3",
     "prompts": "^2.3.0",
     "rimraf": "^3.0.1",
