--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alandawi/adhoc-utils",
-  "version": "1.1.0",
+  "version": "1.0.0",
   "description": "Some tools to improve the teamwork",
   "main": "src/index.js",
   "scripts": {
@@ -30,6 +30,7 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.0.20",
     "edit-file": "^0.3.0",
+    "minimist": "^1.2.5",
     "move-file": "^1.2.0",
     "promisify": "^0.0.3",
     "prompts": "^2.3.0",
