--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "promisify": "^0.0.3",
     "prompts": "^2.3.0",
     "puppeteer": "^3.2.0",
-    "rimraf": "^3.0.1",
-    "timesnap": "^0.1.1"
+    "rimraf": "^3.0.1"
   }
 }
